Refactored text formatting and translation handling
Standardized `MiniMessage` usage, replaced `Placeholder` with `Formatter`, and updated translation keys for consistent and flexible localization across commands and GUIs.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -3,9 +3,9 @@ chat.format.delete=<dark_gray><hover:show_text:'Click to delete this message'>[<
 chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name></click><chat_suffix> <dark_gray>»</dark_gray> <click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message></hover></click>
 command.back.none=<red><prefix> You can't go back any further</red>
 command.back=<gray><prefix> Teleported you to your last position</gray>
-command.broadcast.footer=<reset>
-command.broadcast.format=<red>Server</red> <gray>|</gray> <message><reset>
-command.broadcast.header=<reset>
+command.broadcast.footer=<red></red>
+command.broadcast.format=<red>Server</red> <gray>|</gray> <message>
+command.broadcast.header=<red></red>
 command.enchantment.absent=<red><prefix> Your item does not have <dark_red><enchantment></dark_red></red>
 command.enchantment.applicable=<red><prefix> This enchantment is not applicable on <dark_red><item></dark_red></red>
 command.enchantment.applied=<gray><prefix> Applied <green><enchantment></green> to your item</gray>
@@ -27,7 +27,7 @@ command.health.restored.self=<gray><prefix> Your health has been restored</gray>
 command.hold.item=<red><prefix> You have to hold an item in your main hand</red>
 command.home.delete.name=<gray><prefix> Your home <green><name></green> has been deleted</gray>
 command.home.limit=<red><prefix> You can't set more then <dark_red><limit></dark_red> homes</red>
-command.home.list=<gray><prefix> Your homes <dark_gray>(<green><amount></green>):</dark_gray> <homes></gray>
+command.home.list=<gray><prefix> Your homes <dark_gray>(<green><amount></green>):</dark_gray> <green><homes:'<gray>, </gray>'></green></gray>
 command.home.name=<gray><prefix> Teleported you to your home <green><name></green></gray>
 command.home.set.name=<gray><prefix> Your home <green><name></green> has been set</gray>
 command.home.undefined=<red><prefix> You have no home set yet</red>
@@ -51,7 +51,7 @@ command.item.unbreakable.fail=<red><prefix> Failed to make your item unbreakable
 command.item.unbreakable.removed=<gray><prefix> Your item is no longer unbreakable</gray>
 command.item.unbreakable.success=<gray><prefix> Your item is now unbreakable</gray>
 command.last.seen.now=<gray><prefix> <green><player></green> is online at the moment</gray>
-command.last.seen.time=<gray><prefix> <green><player></green> was last seen <green><time></gray>
+command.last.seen.time=<gray><prefix> <green><player></green> was last seen <green><date:'d MMM uuuu hh:mm:ss a'></green></gray>
 command.motd.changed=<gray><prefix> Changed motd to <green><motd></green></gray>
 command.motd.none=<red><prefix> The motd has not yet been set</red>
 command.motd=<gray><prefix> The motd is <click:copy_to_clipboard:'<motd>'><hover:show_text:'<lang:chat.copy.click>'><green><motd></green></hover></click></gray>
@@ -72,7 +72,7 @@ command.ping.self=<gray><prefix> Your connection latency is around <green><ping>
 command.player.excluded=<red><prefix> The player <dark_red><player></dark_red> is not affected</red>
 command.sender=<red><prefix> You cannot use this command</red>
 command.spawn.define=<red><prefix> Use <click:suggest_command:'/setspawn '><hover:show_text:'Click to set'><dark_red>/setspawn<red></hover></click> to set it</red>
-command.spawn.set=<gray><prefix> Set the spawn location to <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
+command.spawn.set=<gray><prefix> Set the spawn location to <green><world>, <x:0.#>, <y:0.#>, <z:0.#></green> [<green><yaw:0.#>, <pitch:0.#></green>]</gray>
 command.spawn.undefined=<red><prefix> The spawn is not yet defined</red>
 command.spawn=<gray><prefix> Teleported you to spawn</gray>
 command.speed.fly.changed.others=<gray><prefix> <green><entity>'s</green> fly speed is now <green><speed></green></gray>
@@ -85,23 +85,23 @@ command.speed.walk.changed.others=<gray><prefix> <green><entity>'s</green> walk 
 command.speed.walk.changed.self=<gray><prefix> Your walk speed is now <green><speed></green></gray>
 command.suicide=<gray><prefix> You took your own life</gray>
 command.teleport.cancelled=<red><prefix> Teleportation was cancelled</red>
-command.teleport.cooldown.movement=<gray><prefix> Teleporting... don't move for <green><time></green> seconds</gray>
-command.teleport.cooldown=<gray><prefix> You are being teleported in <green><time></green> seconds</gray>
+command.teleport.cooldown.movement=<gray><prefix> Teleporting... don't move for <green><time:0.#></green> seconds</gray>
+command.teleport.cooldown=<gray><prefix> You are being teleported in <green><time:0.#></green> seconds</gray>
 command.time.day=<gray><prefix> It is now day in <green><world></green></gray>
 command.time.midnight=<gray><prefix> It is now midnight in <green><world></green></gray>
 command.time.night=<gray><prefix> It is now night in <green><world></green></gray>
 command.time.noon=<gray><prefix> It is now noon in <green><world></green></gray>
-command.time.query=<gray><prefix> The time in <green><world></green> is <green><time></green></gray>
-command.time.set=<gray><prefix> Set the time in <green><world></green> to <green><time></green></gray>
+command.time.query=<gray><prefix> The time in <green><world></green> is <green><time:0.#></green></gray>
+command.time.set=<gray><prefix> Set the time in <green><world></green> to <green><time:0.#></green></gray>
 command.tpa.accepted.self=<gray><prefix> Accepted <green><player></green> teleport request</gray>
 command.tpa.accepted=<gray><prefix> <green><player></green> accepted your teleport request</gray>
 command.tpa.denied.self=<gray><prefix> Rejected <green><player></green> teleport request</gray>
 command.tpa.denied=<red><prefix> <dark_red><player></dark_red> rejected your teleport request</red>
 command.tpa.disabled=<red><prefix> You will no longer receive teleport requests</red>
 command.tpa.enabled=<gray><prefix> You will receive teleport requests again</gray>
-command.tpa.here.incoming=<gray><prefix> <green><player></green> wants to teleport you to them<newline><prefix> Click to <accept><hover:show_text:'Click to accept'><green>accept</green></hover></accept> or <deny><hover:show_text:'Click to decline'><red>decline</red></hover></deny><newline><prefix> The request will timeout after <green><time></green> seconds</gray>
+command.tpa.here.incoming=<gray><prefix> <green><player></green> wants to teleport you to them<newline><prefix> Click to <accept><hover:show_text:'Click to accept'><green>accept</green></hover></accept> or <deny><hover:show_text:'Click to decline'><red>decline</red></hover></deny><newline><prefix> The request will timeout after <green><time:0.#></green> seconds</gray>
 command.tpa.here.outgoing=<gray><prefix> Asked <green><player></green> to teleport them to you</gray>
-command.tpa.incoming=<gray><prefix> <green><player></green> wants to be teleported to you<newline><prefix> Click to <accept><hover:show_text:'Click to accept'><green>accept</green></hover></accept> or <deny><hover:show_text:'Click to decline'><red>decline</red></hover></deny><newline><prefix> The request will timeout after <green><time></green> seconds</gray>
+command.tpa.incoming=<gray><prefix> <green><player></green> wants to be teleported to you<newline><prefix> Click to <accept><hover:show_text:'Click to accept'><green>accept</green></hover></accept> or <deny><hover:show_text:'Click to decline'><red>decline</red></hover></deny><newline><prefix> The request will timeout after <green><time:0.#></green> seconds</gray>
 command.tpa.no-request=<red><prefix> You have no teleport request from <dark_red><player></dark_red></red>
 command.tpa.no-requests=<red><prefix> You have no teleport requests</red>
 command.tpa.outgoing=<gray><prefix> Asked <green><player></green> to teleport you to them</gray>
@@ -117,7 +117,7 @@ command.vanish.enabled.others=<gray><prefix> <green><entity></green> is now invi
 command.vanish.enabled.self=<gray><prefix> You are now invisible to others</gray>
 command.warp.delete=<gray><prefix> The warp <green><name></green> has been deleted</gray>
 command.warp.empty=<red><prefix> There are no warps yet</red>
-command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</dark_gray> <warps></gray>
+command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</dark_gray> <green><warps:'<gray>, </gray>':'<gray>, </gray>'></green></gray>
 command.warp.set=<gray><prefix> The warp <green><name></green> has been set</gray>
 command.warp.unknown=<red><prefix> There is no warp called <dark_red><name></dark_red></red>
 command.warp=<gray><prefix> Teleported you to warp <green><name></green></gray>
