--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -22,7 +22,7 @@ command.health.restored.self=<gray><prefix> Du wurdest vollständig geheilt</gra
 command.hold.item=<red><prefix> Du musst ein Item in der Haupthand halten</red>
 command.home.delete.name=<gray><prefix> Dein Zuhause <green><name></green> wurde gelöscht</gray>
 command.home.limit=<red><prefix> Du kannst nicht mehr als <dark_red><limit></dark_red> Zuhausepunkte setzen</red>
-command.home.list=<gray><prefix> Deine Zuhausepunkte <dark_gray>(<green><amount></green>):</dark_gray> <homes></gray>
+command.home.list=<gray><prefix> Deine Zuhausepunkte <dark_gray>(<green><amount></green>):</dark_gray> <green><homes:'<gray>, </gray>'></green></gray>
 command.home.name=<gray><prefix> Du wurdest zu deinem Zuhause <green><name></green> teleportiert</gray>
 command.home.set.name=<gray><prefix> Your home <green><name></green> has been set</gray>
 command.home.undefined=<red><prefix> Du hast noch kein Zuhause</red>
@@ -46,7 +46,7 @@ command.item.unbreakable.fail=<red><prefix> Dein Item konnte nicht unzerstörbar
 command.item.unbreakable.removed=<gray><prefix> Dein Item ist nicht länger unzerstörbar</gray>
 command.item.unbreakable.success=<gray><prefix> Dein Item ist jetzt unzerstörbar</gray>
 command.last.seen.now=<gray><prefix> <green><player></green> is momentan online</gray>
-command.last.seen.time=<gray><prefix> <green><player></green> war zuletzt online <green><time></green></gray>
+command.last.seen.time=<gray><prefix> <green><player></green> war zuletzt online <green><date:'MMM d uuuu HH:mm:ss'></green></gray>
 command.motd.changed=<gray><prefix> Die Motd ist jetzt <green><motd></green></gray>
 command.motd.none=<red><prefix> Die Motd ist noch nicht definiert</red>
 command.motd=<gray><prefix> Die Motd ist <click:copy_to_clipboard:'<motd>'><hover:show_text:'<lang:chat.copy.click>'><green><motd></green></hover></click></gray>
@@ -67,7 +67,7 @@ command.ping.self=<gray><prefix> Du hast eine Verbindungslatenz von <green><ping
 command.player.excluded=<red><prefix> Der Spieler <dark_red><player></dark_red> ist nicht betroffen</red>
 command.sender=<red><prefix> Du kannst diesen command nicht nutzen</red>
 command.spawn.define=<red><prefix> Benutze <click:suggest_command:'/setspawn '><hover:show_text:'Klicke zum setzen'><dark_red>/setspawn</dark_red></hover></click> um ihn zu setzen<red>
-command.spawn.set=<gray><prefix> Der spawn wurde gesetzt <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
+command.spawn.set=<gray><prefix> Der spawn wurde gesetzt <green><world>, <x:0.#>, <y:0.#>, <z:0.#></green> [<green><yaw:0.#>, <pitch:0.#></green>]</gray>
 command.spawn.undefined=<red><prefix> Der spawn ist noch nicht definiert</red>
 command.spawn=<gray><prefix> Du wurdest zu spawn teleportiert</gray>
 command.speed.fly.changed.others=<gray><prefix> <green><entity>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
@@ -80,23 +80,23 @@ command.speed.walk.changed.others=<gray><prefix> <green><entity>'s</green> Laufg
 command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
 command.suicide=<gray><prefix> Du hast dir dein eigenes Leben genommen</gray>
 command.teleport.cancelled=<red><prefix> Teleportation wurde abgebrochen</red>
-command.teleport.cooldown.movement=<gray><prefix> Teleportiere ... bewege dich nicht für <green><time></green> Sekunden</gray>
-command.teleport.cooldown=<gray><prefix> Du wirst in <green><time></green> Sekunden teleportiert</gray>
+command.teleport.cooldown.movement=<gray><prefix> Teleportiere ... bewege dich nicht für <green><time:0.#></green> Sekunden</gray>
+command.teleport.cooldown=<gray><prefix> Du wirst in <green><time:0.#></green> Sekunden teleportiert</gray>
 command.time.day=<gray><prefix> Es ist jetzt Tag in <green><world></green></gray>
 command.time.midnight=<gray><prefix> Es ist jetzt Mitternacht in <green><world></green></gray>
 command.time.night=<gray><prefix> Es ist jetzt Nacht in <green><world></green></gray>
 command.time.noon=<gray><prefix> Es ist jetzt Mittag in <green><world></green></gray>
-command.time.query=<gray><prefix> Die aktuelle Zeit in <green><world></green> ist <green><time></green></gray>
-command.time.set=<gray><prefix> Die Zeit in <green><world></green> wurde auf <green><time></green> gesetzt</gray>
+command.time.query=<gray><prefix> Die aktuelle Zeit in <green><world></green> ist <green><time:0.#></green></gray>
+command.time.set=<gray><prefix> Die Zeit in <green><world></green> wurde auf <green><time:0.#></green> gesetzt</gray>
 command.tpa.accepted.self=<gray><prefix> Du hast <green><player>'s</green> Teleportanfrage angenommen</gray>
 command.tpa.accepted=<gray><prefix> <green><player></green> hat deine Teleportanfrage angenommen</gray>
 command.tpa.denied.self=<gray><prefix> Du hast <green><player>'s</green> Teleportanfrage abgelehnt</gray>
 command.tpa.denied=<red><prefix> <dark_red><player></dark_red> hat deine Teleportanfrage abgelehnt</red>
 command.tpa.disabled=<red><prefix> Du akzeptierst keine Teleportanfragen mehr</red>
 command.tpa.enabled=<gray><prefix> Du kannst wieder Teleportanfragen erhalten</gray>
-command.tpa.here.incoming=<gray><prefix> <green><player></green> möchte dich zu ihm/ihr teleportieren<newline><prefix> Klicke zum <accept><hover:show_text:'Klicke zum annehmen'><green>annehmen</green></hover></accept> oder <deny><hover:show_text:'Klicke zum ablehnen'><red>ablehnen</red></hover></deny><newline><prefix> Die Anfrage wird in <green><time></green> Sekunden abgebrochen</gray>
+command.tpa.here.incoming=<gray><prefix> <green><player></green> möchte dich zu ihm/ihr teleportieren<newline><prefix> Klicke zum <accept><hover:show_text:'Klicke zum annehmen'><green>annehmen</green></hover></accept> oder <deny><hover:show_text:'Klicke zum ablehnen'><red>ablehnen</red></hover></deny><newline><prefix> Die Anfrage wird in <green><time:0.#></green> Sekunden abgebrochen</gray>
 command.tpa.here.outgoing=<gray><prefix> Du hast <green><player></green> eine Teleportanfrage zu dir gesendet</gray>
-command.tpa.incoming=<gray><prefix> <green><player></green> möchte sich zu dir teleportieren<newline><prefix> Klicke zum <accept><hover:show_text:'Klicke zum annehmen'><green>annehmen</green></hover></accept> oder <deny><hover:show_text:'Klicke zum ablehnen'><red>ablehnen</red></hover></deny><newline><prefix> Die Anfrage wird in <green><time></green> Sekunden abgebrochen</gray>
+command.tpa.incoming=<gray><prefix> <green><player></green> möchte sich zu dir teleportieren<newline><prefix> Klicke zum <accept><hover:show_text:'Klicke zum annehmen'><green>annehmen</green></hover></accept> oder <deny><hover:show_text:'Klicke zum ablehnen'><red>ablehnen</red></hover></deny><newline><prefix> Die Anfrage wird in <green><time:0.#></green> Sekunden abgebrochen</gray>
 command.tpa.no-request=<red><prefix> Du hast keine Teleportanfrage von <dark_red><player></dark_red></red>
 command.tpa.no-requests=<red><prefix> Du hast keine Teleportanfragen</red>
 command.tpa.outgoing=<gray><prefix> Du hast <green><player></green> eine Teleportanfrage gesendet</gray>
@@ -112,7 +112,7 @@ command.vanish.enabled.others=<gray><prefix> <green><entity></green> ist jetzt u
 command.vanish.enabled.self=<gray><prefix> Du bist jetzt unsichtbar für andere</gray>
 command.warp.delete=<gray><prefix> Der Warp <green><name></green> wurde gelöscht</gray>
 command.warp.empty=<red><prefix> Es existieren noch keine Warps</red>
-command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</dark_gray> <warps></gray>
+command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</dark_gray> <green><warps:'<gray>, </gray>'></green></gray>
 command.warp.set=<gray><prefix> Der Warp <green><name></green> wurde gesetzt</gray>
 command.warp.unknown=<red><prefix> Es gibt keine Warp mit dem namen <dark_red><name></dark_red></red>
 command.warp=<gray><prefix> Du wurdest zum Warp <green><name></green> teleportiert</gray>
