[ci skip] Fixed typo in `tweaks.properties`

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -26,7 +26,7 @@ command.health.restored.others=<gray><prefix> <green><entity>'s</green> health h
 command.health.restored.self=<gray><prefix> Your health has been restored</gray>
 command.hold.item=<red><prefix> You have to hold an item in your main hand</red>
 command.home.delete.name=<gray><prefix> Your home <green><name></green> has been deleted</gray>
-command.home.limit=<red><prefix> You can't set more then <dark_red><limit></dark_red> homes</red>
+command.home.limit=<red><prefix> You can't set more than <dark_red><limit></dark_red> homes</red>
 command.home.list=<gray><prefix> Your homes <dark_gray>(<green><amount></green>):</dark_gray> <green><homes:'<gray>, </gray>'></green></gray>
 command.home.name=<gray><prefix> Teleported you to your home <green><name></green></gray>
 command.home.set.name=<gray><prefix> Your home <green><name></green> has been set</gray>
